--- a/matflix/src/index.css
+++ b/matflix/src/index.css
@@ -1,17 +1,17 @@
 * {
   box-sizing: border-box;
-  font-family: 'UnifrakturMaguntia', sans-serif;
+  font-family: 'UnifrakturCook', sans-serif;
 }
 
 :root {
-  --primary: #2A7AE4;
+  --primary: #ff0000;
   --black: #000000;
   --blackLighter: #9E9E9E;
   --grayLight: #F5F5F5;
   --grayMedium: #e5e5e5; 
-  --white: #FFFFFF;
+  --grayDark: #141414;
   --frontEnd: #6BD1FF;
-  --backEnd: #00C86F;
+  --backEnd: #c80000;
 }
 
 html,
