--- a/matflix/src/index.css
+++ b/matflix/src/index.css
@@ -1,10 +1,11 @@
 * {
   box-sizing: border-box;
-  font-family: 'UnifrakturCook', sans-serif;
+  font-family: 'New Rocker', sans-serif;
 }
 
 :root {
   --primary: #ff0000;
+  --white: #ffffff;
   --black: #000000;
   --blackLighter: #9E9E9E;
   --grayLight: #F5F5F5;
