adicionado os Carousels e alterado a cor dos titulos para a mesma do logo

--- a/matflix/src/index.css
+++ b/matflix/src/index.css
@@ -11,7 +11,7 @@
   --grayLight: #F5F5F5;
   --grayMedium: #e5e5e5; 
   --grayDark: #141414;
-  --frontEnd: #6BD1FF;
+  --frontEnd: #ff0000d0;
   --backEnd: #c80000;
 }
 
